tests/models/struct/unnamed/i16/pass/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2)]
    i16
);
fn main() {}
